--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tt
@@ -45,7 +45,7 @@
                 </li>
                 <li>
                     <a href="#" aria-current="page">
-                        [% INCLUDE 'patron-title.inc' %]
+                        [% INCLUDE 'patron-title.inc' no_html = 1 %]
                     </a>
                 </li>
             [% ELSE %]
