--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/holdshistory.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/holdshistory.tt
@@ -28,7 +28,7 @@
         </li>
         <li>
             <a href="#" aria-current="page">
-                Holds history for [% INCLUDE 'patron-title.inc' %]
+                Holds history for [% INCLUDE 'patron-title.inc' no_html = 1 %]
             </a>
         </li>
     </ol>
