--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/notices.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/notices.tt
@@ -29,7 +29,7 @@
             </li>
             <li>
                 <a href="#" aria-current="page">
-                    Sent notices for [% INCLUDE 'patron-title.inc' %]
+                    Sent notices for [% INCLUDE 'patron-title.inc' no_html = 1 %]
                 </a>
             </li>
         </ol>
@@ -42,7 +42,7 @@
                 <main>
 
                     [% INCLUDE 'members-toolbar.inc' %]
-                    <h1>Sent notices for [% INCLUDE 'patron-title.inc' %]</h1>
+                    <h1>Sent notices for [% INCLUDE 'patron-title.inc' no_html = 1 %]</h1>
 
                     [% IF ( QUEUED_MESSAGES ) %]
                         <div class="page-section">
