--- a/koha-tmpl/intranet-tmpl/prog/en/modules/tools/overduerules.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/tools/overduerules.tt
@@ -72,6 +72,7 @@
             <form method="post" action="/cgi-bin/koha/tools/overduerules.pl">
                 <input type="hidden" name="op" value="save" />
                 <input type="hidden" name="branch" value="[% branch | html %]" />
+                <br/><br/>
                 <h3>Rules for overdue actions: [% IF ( branch ) %][% Branches.GetName( branch ) | html %][% ELSE %] default library [% END %]</h3>
                     [% IF ( datasaved ) %]<div class="dialog message">Changes saved.</div> [% END %]
 
@@ -93,6 +94,7 @@
                                         <th scope="col">Delay</th>
                                         <th scope="col">Letter</th>
                                         <th scope="col">Restrict</th>
+			                <th scope="col">Fine</th>
                                             [% FOREACH mtt IN message_transport_types %]
                                                 [% NEXT IF mtt == 'itiva' AND !Koha.Preference('TalkingTechItivaPhoneNotification') %]
                                                 [% NEXT IF mtt == 'phone' AND !Koha.Preference('PhoneNotification') %]
@@ -136,6 +138,9 @@
                                                         <input type="checkbox" name="debarred[% tab.number | html %]-[% value.overduename | html %]" value="1" />
                                                     [% END %]
                                                 </td>
+                                                <td>
+                                                  <input type="text" name="fine[% tab.number %]-[% value.overduename %]" size="4" value="[% value.fine %]" />
+                                                </td>
                                                 [% FOREACH mtt IN value.message_transport_types %]
                                                     [% NEXT IF mtt.value == 'itiva' AND !Koha.Preference('TalkingTechItivaPhoneNotification') %]
                                                     [% NEXT IF mtt.value == 'phone' AND !Koha.Preference('PhoneNotification') %]
@@ -159,7 +164,6 @@
                         [% END # /FOR tabs %]
                     </div> <!-- /.tab-content -->
                 </div>
-
                 <fieldset class="action"><input type="submit" class="btn btn-primary" value="Save changes" /></fieldset>
             </form>
             [% ELSE %]
