--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/kohasuomi-pendingreserves.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/kohasuomi-pendingreserves.tt
@@ -139,43 +139,43 @@
 					<thead>
 
 						<tr>
-						<td><input type="text" class="filter" data-column_num="0" placeholder="Pull count" style="width:100%"/></td>
-						<td><input type="text" class="filter" data-column_num="1" placeholder="Available" style="width:100%"/></td>
-						<td><input type="text" class="filter" data-column_num="2" placeholder="Holds" style="width:100%"/></td>
-						<td><input type="text" class="filter" data-column_num="3" placeholder="Next patron" style="width:100%"/></td>
-						<td id="homebranchfilter"></td> <!-- 4 -->
-						<td id="holdatfilter"></td> <!-- 5 -->
-						<td><input type="text" class="filter" data-column_num="6" placeholder="Call numbers" style="width:100%"/></td>
-						<td><input type="text" class="filter" data-column_num="7" placeholder="Title" style="width:100%"/></td>
-						<td><input type="text" class="filter" data-column_num="8" placeholder="Copies" style="width:100%"/></td>
-						<td><input type="text" class="filter" data-column_num="9" placeholder="Issues" style="width:100%"/></td>
-						<td id="itypefilter"></td> <!-- 10 -->
-						<td id="mtypefilter"></td> <!-- 11 -->
-						<td id="locationfilter"></td> <!-- 12 -->
-						<td id="sublocationfilter"></td> <!-- 13 -->
-						<td id="ccodefilter"></td> <!-- 14 -->
-						<td><input type="text" class="filter" data-column_num="15" placeholder="Item notes" style="width:100%"/></td>
-						<td><input type="text" class="filter" data-column_num="16" placeholder="Next hold" style="width:100%"/></td>
+							<td><input type="text" class="filter" data-column_num="0" placeholder="Pull count" style="width:100%"/></td>    <!--  1 -->
+							<td><input type="text" class="filter" data-column_num="1" placeholder="Available" style="width:100%"/></td>     <!--  2 -->
+							<td><input type="text" class="filter" data-column_num="2" placeholder="Holds" style="width:100%"/></td>         <!--  3 -->
+							<td><input type="text" class="filter" data-column_num="3" placeholder="Next patron" style="width:100%"/></td>   <!--  4 -->
+							<td id="homebranchfilter"></td>                                                                                 <!--  5 -->
+							<td id="holdatfilter"></td>                                                                                     <!--  6 -->
+							<td><input type="text" class="filter" data-column_num="6" placeholder="Call numbers" style="width:100%"/></td>  <!--  7 -->
+							<td><input type="text" class="filter" data-column_num="7" placeholder="Title" style="width:100%"/></td>         <!--  8 -->
+							<td><input type="text" class="filter" data-column_num="8" placeholder="Copies" style="width:100%"/></td>        <!--  9 -->
+							<td><input type="text" class="filter" data-column_num="9" placeholder="Issues" style="width:100%"/></td>        <!-- 10 -->
+							<td id="itypefilter"></td>                                                                                      <!-- 11 -->
+							<td id="mtypefilter"></td>                                                                                      <!-- 12 -->
+							<td id="locationfilter"></td>                                                                                   <!-- 13 -->
+							<td id="sublocationfilter"></td>                                                                                <!-- 14 -->
+							<td id="ccodefilter"></td>                                                                                      <!-- 15 -->
+							<td><input type="text" class="filter" data-column_num="15" placeholder="Item notes" style="width:100%"/></td>   <!-- 16 -->
+							<td><input type="text" class="filter" data-column_num="16" placeholder="Next hold" style="width:100%"/></td>    <!-- 17 -->
 						</tr>
 
 						<tr>
-						<th>Pull</th>
-						<th>Available</th>
-						<th>Holds</th>
-						<th style="min-width:150px">Next patron</th>
-						<th class="string-sort">From</th>
-						<th class="string-sort">To</th>
-						<th style="min-width:85px">Call numbers</th>
-						<th class="anti-the" style="min-width:200px">Title</th>
-						<th>Copies</th>
-						<th>Issues</th>
-						<th class="string-sort">Itemtypes</th>
-						<th class="string-sort">Materials</th>
-						<th class="string-sort">Locations</th>
-						<th class="string-sort">Sublocations</th>
-						<th class="string-sort">Collections</th>
-						<th style="min-width:150px">Item notes</th>
-						<th class="title-string">Next hold</th>
+							<th>Pull</th>
+							<th>Available</th>
+							<th>Holds</th>
+							<th>Next patron</th>
+							<th class="string-sort">From</th>
+							<th class="string-sort">To</th>
+							<th>Call numbers</th>
+							<th>Title</th>
+							<th>Copies</th>
+							<th>Issues</th>
+							<th class="string-sort">Itemtypes</th>
+							<th class="string-sort">Materials</th>
+							<th class="string-sort">Locations</th>
+							<th class="string-sort">Sublocations</th>
+							<th class="string-sort">Collections</th>
+							<th>Item notes</th>
+							<th>Next hold</th>
 						</tr>
 
 					</thead>
@@ -207,10 +207,9 @@
 									</td>
 									<td>
 										[% INCLUDE 'biblio-default-view.inc' biblionumber = reserveloo.biblionumber %]
-										[% reserveloo.title |html %] [% IF (reserveloo.number) %][% reserveloo.number %][% END %] [% FOREACH s IN reserveloo.subtitle %] [% s %][% END %]</a><br/><br/>
+										[% reserveloo.title |html %] [% IF (reserveloo.number) %][% reserveloo.number %] [% END %][% FOREACH s IN reserveloo.subtitle %][% s %] [% END %]</a><br/><br/>
 										[% IF ( reserveloo.author ) %]<b>by</b> [% reserveloo.author %]<br/><br/>[% END %]
 										[% IF ( reserveloo.collectiontitle ) %]<b>series</b> [% reserveloo.collectiontitle %][% IF ( reserveloo.collectionvolume ) %] [% reserveloo.collectionvolume %][% END %]<br/><br/>[% END %]
-										[% reserveloo.title |html %] [% IF (reserveloo.number) %][% reserveloo.number %][% END %] [% FOREACH s IN reserveloo.subtitle %] [% s %][% END %]</a><br/><br/>
 										[% IF ( reserveloo.editionstatement ) %][%reserveloo.editionstatement %][% END %]
 										[% IF (reserveloo.enumchron) %]Issue [% reserveloo.enumchron %][% END %]
 									</td>
