--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/kohasuomi-pendingreserves.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/kohasuomi-pendingreserves.tt
@@ -207,11 +207,21 @@
 									</td>
 									<td>
 										[% INCLUDE 'biblio-default-view.inc' biblionumber = reserveloo.biblionumber %]
-										[% reserveloo.title |html %] [% IF (reserveloo.number) %][% reserveloo.number %] [% END %][% FOREACH s IN reserveloo.subtitle %][% s %] [% END %]</a><br/><br/>
-										[% IF ( reserveloo.author ) %]<b>by</b> [% reserveloo.author %]<br/><br/>[% END %]
-										[% IF ( reserveloo.collectiontitle ) %]<b>series</b> [% reserveloo.collectiontitle %][% IF ( reserveloo.collectionvolume ) %] [% reserveloo.collectionvolume %][% END %]<br/><br/>[% END %]
-										[% IF ( reserveloo.editionstatement ) %][%reserveloo.editionstatement %][% END %]
-										[% IF (reserveloo.enumchron) %]Issue [% reserveloo.enumchron %][% END %]
+										[% reserveloo.title | html %]
+										[% IF ( reserveloo.number ) %] [% reserveloo.number | html %] [% END %]
+										[% FOREACH s IN reserveloo.subtitle %][% s | html %] [% END %]</a>
+
+                                        [% IF ( reserveloo.part_name ) %]<br/>[% reserveloo.part_name | html %][% END %]
+                                        [% IF ( reserveloo.part_number ) %] [% reserveloo.part_number | html %][% END %]
+										<br/><br/>
+
+										[% IF ( reserveloo.author ) %]<b>by</b> [% reserveloo.author | html %]<br/><br/>[% END %]
+										[% IF ( reserveloo.collectiontitle ) %]<b>series</b> [% reserveloo.collectiontitle | html %][% END %]
+										[% IF ( reserveloo.collectionvolume ) %] [% reserveloo.collectionvolume | html %]<br/><br/>[% END %]
+
+										[% IF ( reserveloo.editionstatement ) %][%reserveloo.editionstatement | html %][% END %]
+										[% IF ( reserveloo.publicationyear ) %] [%reserveloo.publicationyear | html %][% END %]
+										[% IF ( reserveloo.enumchron ) %]Issues [% reserveloo.enumchron | html %][% END %]
 									</td>
 
 								[% ELSE %]
