--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/returns.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/returns.tt
@@ -1263,7 +1263,7 @@
                                             [% riloo.dateaccessioned | $KohaDates %]
                                         </td>
                                         <td class="ci-recordlevelitemtype">
-                                            [% ItemTypes.GetDescription( riloo.recordtype ) | html %]
+                                            [% riloo.recordtype | html %]
                                         </td>
                                         <td class="ci-itemtype">
                                             [% ItemTypes.GetDescription( riloo.itemtype ) | html %]
