--- a/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/orderreceive.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/orderreceive.tt
@@ -221,7 +221,7 @@
                       used
                   </p>
               [% END %]
-              <div id="outeritemblock"></div>
+              <div id="outeritemblock" class="marc_editor"></div>
           </fieldset>
         [% END %]
     [% ELSIF (AcqCreateItem == 'ordering') %]
