--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/additem.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/additem.tt
@@ -150,7 +150,7 @@
     </div>
     <div class="col-sm-10">
 
-<div id="cataloguing_additem_newitem" class="item_edit_form">
+<div id="cataloguing_additem_newitem" class="item_edit_form marc_editor">
     <form id="f" method="post" action="/cgi-bin/koha/cataloguing/additem.pl?biblionumber=[% biblio.biblionumber | html %]" name="f">
     <input type="hidden" name="op" value="[% op | html %]" />
     [% IF (popup) %]
