--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/debit_types.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/debit_types.tt
@@ -171,7 +171,7 @@
                                     <th>Default amount</th>
                                     <th>Available for</th>
                                     <th>Library limitations</th>
-                                    <th>No issues charge</th>
+                                    <th>Blocks checkouts?</th>
                                     <th class="noExport">Actions</th>
                                 </thead>
                                 <tbody>
@@ -212,9 +212,9 @@
                                         </td>
                                         <td>
                                             [% IF debit_type.restricts_checkouts %]
-                                                <span>Included</span>
+                                                <span>Yes</span>
                                             [% ELSE %]
-                                                <span>Not Included</span>
+                                                <span>No</span>
                                             [% END %]
                                         </td>
                                         <td class="actions">
