Revert "Bug 30975: Fix framework plugins not working on cloned fields/subfields"
This reverts commit 805f9fe2d8673b9c430b54e484149a4c71daa7da.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/orderreceive.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/orderreceive.tt
@@ -221,7 +221,7 @@
                       used
                   </p>
               [% END %]
-              <div id="outeritemblock" class="marc_editor"></div>
+              <div id="outeritemblock"></div>
           </fieldset>
         [% END %]
     [% ELSIF (AcqCreateItem == 'ordering') %]
