--- a/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/neworderempty.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/neworderempty.tt
@@ -349,7 +349,7 @@
               <div class="dialog message">The autoBarcode system preference is set to [% Koha.Preference('autoBarcode') | html %] and items with blank barcodes will have barcodes generated upon save to database</div>
           [% END %]
 
-          <div id="outeritemblock" class="marc_editor"></div>
+          <div id="outeritemblock"></div>
 
       </fieldset>
       [% END %][%# | html UNLESS subscriptionid %]
