--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/addbiblio.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/addbiblio.tt
@@ -1004,7 +1004,7 @@ function PopupMARCFieldDoc(field) {
                 <input type="hidden" name="breedingid" value="[% breedingid | html %]" />
                 <input type="hidden" name="changed_framework" value="" />
 
-                <div id="addbibliotabs" class="toptabs numbered marc_editor">
+                <div id="addbibliotabs" class="toptabs numbered">
                     <div class="tab-content">
 
                         [% FOREACH BIG_LOO IN BIG_LOOP %]
@@ -1137,7 +1137,7 @@ function PopupMARCFieldDoc(field) {
                                                             [% END %]
 
                                                         [% ELSIF ( mv.type == 'text_complex' ) %]
-                                                            <input type="text" id="[%- mv.id | html -%]" name="[%- mv.name | html -%]" value="[%- mv.value | html -%]" class="input_marceditor framework_plugin" tabindex="1" size="[%- mv.size | html -%]" maxlength="[%- mv.maxlength | html -%]" data-plugin="[% mv.plugin | html %]" />
+                                                            <input type="text" id="[%- mv.id | html -%]" name="[%- mv.name | html -%]" value="[%- mv.value | html -%]" class="input_marceditor framework_plugin" tabindex="1" size="[%- mv.size | html -%]" maxlength="[%- mv.maxlength | html -%]" />
                                                             [% mv.javascript | $raw %]
                                                         [% ELSIF ( mv.type == 'hidden' ) %]
                                                             <input tabindex="1" type="hidden" id="[%- mv.id | html -%]" name="[%- mv.name | html -%]" size="[%- mv.size | html -%]" maxlength="[%- mv.maxlength | html -%]" value="[%- mv.value | html -%]" />
@@ -1178,9 +1178,9 @@ function PopupMARCFieldDoc(field) {
                                                                     <span class="buttonDot tag_editor disabled" tabindex="-1" title="Field autofilled by plugin"></span>
                                                                 [% ELSE %]
                                                                     [% IF mv.plugin == "upload.pl" %]
-                                                                        <a href="#" id="buttonDot_[% mv.id | html %]" class="tag_editor upload framework_plugin" tabindex="1" data-plugin="[% mv.plugin | html %]"><i class="fa fa-upload" aria-hidden="true"></i> Upload</a>
+                                                                        <a href="#" id="buttonDot_[% mv.id | html %]" class="tag_editor upload framework_plugin" tabindex="1"><i class="fa fa-upload" aria-hidden="true"></i> Upload</a>
                                                                     [% ELSE %]
-                                                                        <a href="#" id="buttonDot_[% mv.id | html %]" class="buttonDot tag_editor framework_plugin" tabindex="1" title="Tag editor" data-plugin="[% mv.plugin | html %]">Tag editor</a>
+                                                                        <a href="#" id="buttonDot_[% mv.id | html %]" class="buttonDot tag_editor framework_plugin" tabindex="1" title="Tag editor">Tag editor</a>
                                                                     [% END %]
                                                                 [% END %]
                                                             </span>
