--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/smart-rules.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/smart-rules.tt
@@ -296,7 +296,13 @@
                                                 <td>[% decreaseloanholds | html %]</td>
                                                 <td>[% fine | html %]</td>
                                                 <td>[% chargeperiod | html %]</td>
-                                                <td>[% IF chargeperiod_charge_at %]Start of interval[% ELSE %]End of interval[% END %]</td>
+                                                <td data-code="[% chargeperiod_charge_at | html %]">
+                                                  [% IF chargeperiod_charge_at %]
+                                                    Start of interval
+                                                  [% ELSE %]
+                                                    End of interval
+                                                  [% END %]
+                                                </td>
                                                 <td>[% firstremind | html %]</td>
                                                 <td>[% overduefinescap | $Price %]</td>
                                                 <td>
