Bug 34671: Ignore new_guarantor_relationship input if it's hidden
Validating patron forms hidden fields causes problems when
adding/modifying guarantee patrons since class
new_guarantor_relationship is always hidden and mandatory
if syspref "borrowerRelationship" is set. This patch adds class
ignore_validation to relationship input if it's hidden to ignore
validatation and removes it when input is displayed, so it is
validated.

To test:
1. Apply previous patch.
2. Add or modify guarantee patron.
3. Do not add or modify guarantor.
4. Attempt to save patron.
=> Pressing save button does nothing and no error is
displayed.
5. Apply this patch.
6. Again add or modify guarantee patron and don't add or
modify guarantor.
7. Attempt to save.
=> Saving should now be successfull.
8. Again, add or modify guarantee patron, but this time also
add or modify guarantor.
9. Leave relationship input empty.
10. Attempt to save.
=> Saving should fail and error "There are some required
fields missing..." should be displayed on top of "Patron
guarantor" field set.
11. Add relationship for guarantor and save.
=> Saving should now be successfull.

Sponsored-by: Koha-Suomi Oy

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentrygen.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentrygen.tt
@@ -1931,6 +1931,11 @@ legend:hover {
         [% END %]
         $("#guarantor_template").hide();
 
+        //Add class ignore_validation to hidden new_guarantor_relationship to ignore it when form is validated
+        if($(".new_guarantor_relationship").is(":hidden")){
+            $(".new_guarantor_relationship").addClass("ignore_validation");
+        }
+
     </script>
     [% Asset.js("js/members.js") | $raw %]
     [% Asset.js("js/messaging-preference-form.js") | $raw %]
