--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentrygen.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentrygen.tt
@@ -1936,6 +1936,11 @@ legend:hover {
             $(".new_guarantor_relationship").addClass("ignore_validation");
         }
 
+        // Remove class ignore_validation from new_guarantor_relationship to validate missing relationship value
+        if($(".new_guarantor_relationship").is(":visible")){
+            $(".new_guarantor_relationship").removeClass("ignore_validation");
+        }
+
     </script>
     [% Asset.js("js/members.js") | $raw %]
     [% Asset.js("js/messaging-preference-form.js") | $raw %]
